<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wong.clockin.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/limegreen">
        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:text="@string/refresh"/>
        <Button
            android:id="@+id/fa_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:text="@string/fa_plus"/>
    </RelativeLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_list"/>
            <RelativeLayout
                android:id="@+id/relatelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </FrameLayout>



</LinearLayout>
